Removendo code smells